# EssentialsOfParallelComputing

ExerciseCode/Exercise2.2/: CMakeLists.txt  Fibonacci.c
ExerciseCode/Exercise2.2/tests/: fibtest_0.ctest  fibtest_1.ctest  fibtest_16.ctest  fibtest_4.ctest  fibtest_neg.ctest  fibtest_none.ctest
